fix: naprawa po scaleniu
